@@ -290,6 +290,7 @@ ruby_test(name = "unit",
     ":firefox",
     ":ie",
     ":iphone",
+    ":opera",
     ":remote",
     ":phantomjs",
     ":support",
